spring-keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-keycloak-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: hazelsoft.in 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spring-keycloak-service
            port:
              number: 8080
